# TripPlanner

./: .gitignore  CMakeLists.txt  README.md  branches.txt  debug  debug_test
data/: AccountStorage
include/: AccountHandler.h  Activity.h  DummyData.h  Flight.h  HandleActivity.h  HandleFlight.h  HandleHotel.h  Hotel.h  MainMenu.h  Schedule.h  Trip.h  TripHandler.h  TripItem.h  User.h
src/: AccountHandler.cpp  Activity.cpp  CMakeLists.txt  DummyData.cpp  Flight.cpp  Hotel.cpp  MainMenu.cpp  Schedule.cpp  Trip.cpp  TripHandler.cpp  User.cpp  main.cpp  main_test.cpp
test/: CMakeLists.txt  test.cpp
